# apps/api/swagger/build/openapi.yaml
@@ -1983,12 +1983,12 @@ paths:
                   - instance
   '/todos/{todo_id}/status':
     parameters:
-      - name: todo_Id
+      - name: todo_id
         description: TodoID
         in: path
         required: true
         schema:
-          type: integer
+          type: string
         example: 1
     put:
       summary: TODO-006 Todo状態更新
